--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "ipl project server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "data": "node ./public/prepareData.js",
+    "start": "node index.js"
   },
   "keywords": [
     "ipl",
